syntax = "proto3";

package register;

option go_package = "github.com/123shang60/image-load/pkg/register/data";

message NodeInfo {
  string name = 1;
  string addr = 2;
  string port = 3;
}

message RegistResp {
  string err = 1;
  int64 code = 2;
}

service Register {
  rpc RegistNode(NodeInfo) returns (RegistResp);
}